--- a/style.css
+++ b/style.css
@@ -5,13 +5,14 @@
 /*Barra de navegacion*/
 
 .navbar{
-    padding: .5rem;
-    background-color: #A75D5D;
+    position: relative;
+    padding: 1.2rem 0;
+    background-color: #b3735e;
 
 }
 
 .navbar-collapse{
-    justify-content:space-between;
+    justify-content: center;
     font-size: 1.3rem;
 }
 
@@ -20,14 +21,19 @@
 }
 
 .logo-portafolio{
+    position: absolute;
+    left: 2rem;
+    top: 1rem;
     width: 60px;
     height: 60px;
 }
 
 .nav-link{
-    color: #20262E;
-    margin-right: 1.8rem;
+    color: #000000;
+    margin-right: 2.5rem;
     transition: transform 0.3s ease;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 1.8rem;
 }
 
 .nav-link:hover{
@@ -40,8 +46,6 @@
 section{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 h1{
@@ -57,7 +61,8 @@ h1{
 
 .seccion-clara{
     color: black;
-    background-color: #675D50;
+    background-color: beige;
+    height: 50vh;
 }
 
 .seccion-titulo{
@@ -73,20 +78,20 @@ h1{
 /* Seccion Hero */
 
 .hero{
-    background-color: #D3756B;
+    background-color: beige;
     min-height: 450px;
     text-align: center;
 }
 
 .hero-principal{
     height: 100vh;
-    padding: 3rem;
+    padding: 1rem 0;
 }
 
 .card{
     padding: 40px;
     border-radius: 30px;
-    background-color:#a75d5d91;
+    background-color:#b3735e;
     box-shadow: 0px 0px 5px 2px #000;
 }
 
@@ -116,18 +121,19 @@ h1{
 /*Seccion sobre mi */
 
 .sobre-mi{
-    height: 50vh;
+    height: 60vh;
+    align-items: center;
 }
 
 .sobre-mi .contenedor{
-    max-width: 90vw;
+    max-width: 80vw;
     text-align: center;
 }
 
 .seccion-titulo{
     color: #313131;
     font-size: 3rem;
-    padding-bottom: 2.8rem;
+    padding: 2.8rem 0;
     font-family: 'Source Sans Pro', sans-serif;
 }
 
@@ -136,50 +142,121 @@ h1{
     font-size: 1.2rem;
 }
 
-/* Experiencia */
-.experiencia{
-    padding: 40px 40px 60px 40px;
-    background-color: #FFC3A1;
+/* Skilles */
+
+.skill-titulo h2{
+    font-size: 3rem;
+    font-family: 'Source Sans Pro', sans-serif;
+    padding: 3rem 0; 
 }
 
-.experiencia .columna{
-    padding: 20px;
-    border: 1px solid #000000;
-    justify-content: space-between; 
-    border-radius: 15px;
-    transition: all 0.2 ease-in;
-    background-color: #A75D5D;
+.logos{
+    width: 100vw;
+    display: flex;
+    justify-content: space-evenly;
+
 }
 
-.experiencia .columna:hover{
-    color: white;
-    background-color: #1b1b32;
+.logos img{
+    width: 100px;
+    height: 100px;
 }
 
-.experiencia i{
-    font-size: 2.5rem;
-    color: #7ade30;
-    background-color: #0a0a23;
-    padding: 8px 19px;
-    border-radius: 50%;
+/*Proyectos*/
+
+.proyectos{
+    height: 100vh;
+    width: 100vw;
+    align-items: center;
+    background-color: beige;
 }
 
 
-.experiencia-titulo{
-    font-size: 25px;
-    font-weight: bold;
-    margin: 10px 0;
+.proyectos h2{
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 3rem;
+    padding: 3rem 0;
 }
 
-.badges-contenedor{
-    font-size: 20px;
-    font-weight: bold;
-    margin: 10px 0;
+.card-proyecto{
+    background: url(./imagenes/proyecto-1.png);
+    background-size: cover;
+    height: 350px;
+    border-radius: 30px;
 }
 
-.badge{
-    margin: 5px;
+.card-content{
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, 0.8);
+    transition: .5s;
+    opacity: 0;
 }
+
+.card-content a{
+    padding: 0 15px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.card-proyecto:hover .card-content{
+    opacity: 1;
+}
+
+/*Contactos*/
+
+.contactos{
+    width: 100vw;
+    height: 200px;
+    background-color: #F0997D;
+}
+
+.contactos-titulo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #313131;
+    font-size: 3rem;
+    padding: 1rem 0;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+.contactos-content{
+    display: flex;
+    height: 100px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contacto-redes{
+    width: 500px;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 80px;
+}
+
+.contacto-redes a img{
+    width: 50px;
+    height: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
