--- a/style.css
+++ b/style.css
@@ -1,134 +1,120 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,400;0,6..12,600;1,6..12,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+/* font-family: 'Lilita One', cursive; */
 /*font-family: 'Rubik Dirt', cursive; */
 /*font-family: 'Source Sans Pro', sans-serif;*/
 
-body{
-    overflow-x: hidden;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-
 
 /*Barra de navegacion*/
 
 .navbar{
+    width: 100%;
+    z-index: 1;
+    position: fixed;
     padding: 1.2rem 0;
-    background-color: #b3735e;
+    background-color: #d1d1d1;
 
 }
-
-.logo-portafolio{
-    position: absolute;
-    left: 2rem;
-    top: 1rem;
-    width: 60px;
-    height: 60px;
-}
-
 .nav-link{
-    color: #000000;
+    color: #1a1a1a;
     margin-right: 2.5rem;
     transition: transform 0.3s ease;
     font-family: 'Source Sans Pro', sans-serif;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
 }
-
 .nav-link:hover{
-    color: #ECECEC;
+    color: #000;
     transform: scale(1.2);
 }
+nav a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: #000000;
+    bottom: 10px;
+    left: 0;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.3s ease;
+}
+nav a:hover::after {
+    transform: scaleX(1);
+  }
 
-/* Estilos Generales */
-
-section{
+/*Seccion Hero*/
+.hero-container{
     display: flex;
-    flex-direction: column;
-}
-
-h1{
-    font-size: 2.5rem;
-    font-family: 'Source Sans Pro', sans-serif;
-    color: #ECECEC;
-}
-
-.seccion-oscura{
-    background-color: #F0997D;
-    color: white;
-}
-
-.seccion-clara{
-    color: black;
-    background-color: beige;
-    height: 50vh;
-}
-
-.seccion-titulo{
-    font-size: 2rem;
-    padding: 15px 0;
-    font-family: 'Rubik Dirt', cursive;
-}
-
-.seccion.texto{
-    font-size: 1.2rem;
-}
-
-/* Seccion Hero */
-
-.hero{
-    background-color: beige;
-    min-height: 450px;
+    align-items: center;
     text-align: center;
+    justify-content: center;
+    background-image: url(./imagenes/background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 90vh;
+    width: 100%;
 }
-
-.hero-principal{
-    height: 100vh;
-    padding: 1rem 0;
-}
-
-.card{
-    padding: 40px;
-    border-radius: 30px;
-    background-color:#b3735e;
-    box-shadow: 0px 0px 5px 2px #000;
-}
-
-
-.hero-imagen-perfil{
-    width: 380px;
-    height: 450px;
-    border-radius: 10px;
-    margin-bottom: 10px;
-    transition: transform 0.6s ease;
-}
-
-.hero-imagen-perfil:hover{
-    transform: scale(1.1);
-}
-
-.hero-inferior-imagen{
-    margin-top: 3rem;
-}
-
-.hero-principal h2{
-    color: #ECECEC;
-    font-weight: bold;
-    font-size: 1.5rem;
+.hero-container h1{
+    width: 450px;
+    font-family: 'Lilita One', cursive;
+    margin-bottom: 200px;
+    margin-right: 50px;
+    font-size: 48px;
 }
 
 /*Seccion sobre mi */
 
-.sobre-mi{
-    max-height: 100vh;
+#sobre-mi{
+    background-color: #d1d1d1;
+    padding: 20px 0;
+}
+.sm-contenedor{
+    display: flex;
     align-items: center;
+    width: 100vw;
 }
-
-.seccion-titulo{
-    color: #313131;
-    font-size: 3rem;
-    padding: 2.8rem 0;
-    font-family: 'Source Sans Pro', sans-serif;
+.card-contenedor{
+    display: flex;
+    justify-content: center;
+    padding: 4rem ;
+    height: 100vh;
+    width: 100%;
 }
-
-.seccion-texto{
-    color: #0B2447;
-    font-size: 1.2rem;
+.card{
+    background-image: url(/imagenes/fotocv1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    box-shadow: 0px 0px 5px 2px #000;
+    height: 100%;
+    min-width: 300px;
+}
+.card-body{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    text-align: center;
+    padding-bottom: 2rem;
+}
+.card-body h1{
+    font-size: 2.5rem;
+    color: #ECECEC;
+}
+.card-body h2{
+    color: #ECECEC;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+.sm-parrafo p{
+    width: 100%;
+    color: #1a1a1a;
+    font-size: 22px;
 }
 
 /* Skilles */
@@ -138,44 +124,71 @@ h1{
     font-family: 'Source Sans Pro', sans-serif;
     padding: 3rem 0; 
 }
-
 .logos{
     width: 100vw;
     display: flex;
     justify-content: space-evenly;
-
+    flex-wrap: wrap;
 }
-
 .logos img{
-    width: 100px;
+    width: 90px;
     height: 100px;
+}
+.logos img:hover{
+    animation:shake-horizontal 0.8s linear both
+} 
+@keyframes shake-horizontal{
+    0%,100%
+        {transform:translateX(0)}
+    10%,30%,50%,70%
+        {transform:translateX(-10px)}
+    20%,40%,60%
+        {transform:translateX(10px)}
+    80%
+        {transform:translateX(8px)}
+    90%
+        {transform:translateX(-8px)}
 }
 
 /*Proyectos*/
 
 .proyectos{
-    height: 100vh;
-    width: 100vw;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    background-color: beige;
+    background-color: #1a1a1a;
 }
-
-
 .proyectos h2{
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 3rem;
-    padding: 2rem 0;
+    padding-bottom: 2rem;
+    color: #d1d1d1;
 }
-
-.card-proyecto{
+.proyectos-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    /* flex-direction: column; */
+    margin-bottom: 30px;
+}
+.card-proyecto-1{
     background: url(./imagenes/proyecto-1.png);
     background-size: cover;
+    border-radius: 30px;
     height: 350px;
+    margin-right: 50px;
+}
+.card-proyecto-2{
+    background: url(./imagenes/proyecto-2.png);
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position:center;
+    height: 350px;
+    width: 600px;
     border-radius: 30px;
 }
-
 .card-content{
-    width: 100%;
     height: 100%;
     border-radius: 30px;
     display: flex;
@@ -186,14 +199,15 @@ h1{
     transition: .5s;
     opacity: 0;
 }
-
 .card-content a{
     padding: 0 15px;
     color: #fff;
     text-decoration: none;
 }
-
-.card-proyecto:hover .card-content{
+.card-proyecto-1:hover .card-content{
+    opacity: 1;
+}
+.card-proyecto-2:hover .card-content{
     opacity: 1;
 }
 
@@ -202,9 +216,8 @@ h1{
 .contactos{
     width: 100vw;
     height: 200px;
-    background-color: #F0997D;
+    background-color: #d1d1d1;
 }
-
 .contactos-titulo{
     display: flex;
     justify-content: center;
@@ -214,46 +227,18 @@ h1{
     padding: 1rem 0;
     font-family: 'Source Sans Pro', sans-serif;
 }
-
-.contactos-content{
-    display: flex;
-    height: 100px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
 .contacto-redes{
-    width: 500px;
     display: flex;
-    justify-content: space-between;
-    padding: 0 80px;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 3rem auto;
 }
-
 .contacto-redes a img{
     width: 50px;
     height: 50px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*Adaptable (Responsivo)*/
+/*Media (Responsivo)*/
 
 @media screen and (max-width:767px){
     .navbar-brand{
@@ -282,6 +267,9 @@ h1{
     #about-me p{
         font-size: 1rem;
     }
+    .sm-contenedor{
+        flex-wrap: wrap;
+    }
 }
 
 @media screen and (max-width:425px) {
@@ -300,7 +288,8 @@ h1{
     .proyectos-container{
         width: 200px;
     }
-    
-
+    .contactos-titulo{
+        font-size: 30px;
+    }
 }
 
